--- a/index.html
+++ b/index.html
@@ -126,6 +126,92 @@
         </div>
       </section>
 
+      <section class="container">
+        <h2>Shoes</h2>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+          <div class="col">
+            <div class="card border-0 shadow-lg h-100">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+              </div>
+              <div class="m-3">
+                <button class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow-lg h-100">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike 360</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="m-3">
+                <button class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow-lg h-100">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+              </div>
+              <div class="m-3">
+                <button class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
+      <section class="container mt-5">
+        <h2>Backpack</h2>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+          <div class="col">
+            <div class="card border-0 shadow-lg h-100">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Laltu Bag</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+              </div>
+              <div class="m-3">
+                <button class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow-lg h-100">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Blue Niltu Bag</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="m-3">
+                <button class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow-lg h-100">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Black Kaltu Bag</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+              </div>
+              <div class="m-3">
+                <button class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
     </main>
     <footer>
 
