--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 
     <!-- Bootstrap Cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Custom css -->
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Panda Commerce</title>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
 
               <a class="navbar-brand" href="#">
@@ -28,13 +30,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                   </li>
                 </ul>
 
@@ -49,12 +51,12 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
 
-                  <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                  <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center">
                     <div class="col-lg-7">
                       <h1>Cool Dude Headphone</h1>
                       <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                       <h1>$420</h1>
-                      <button class="btn btn-warning">Buy Now</button>
+                      <button class="panda-btn-buy-now">Buy Now</button>
                     </div>
                     <div class="col-lg-5">
                       <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -63,12 +65,12 @@
                   
                 </div>
                 <div class="carousel-item">
-                  <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                  <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center">
                     <div class="col-lg-7">
                       <h1>Mega LCD TV For Sports</h1>
                       <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
                       <h1>$1200</h1>
-                      <button class="btn btn-warning">Buy Now</button>
+                      <button class="panda-btn-buy-now">Buy Now</button>
                     </div>
                     <div class="col-lg-5">
                       <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -76,12 +78,12 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                  <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center">
                     <div class="col-lg-7">
                       <h1>X-Box for your living room</h1>
                       <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
                       <h1>$600</h1>
-                      <button class="btn btn-warning">Buy Now</button>
+                      <button class="panda-btn-buy-now">Buy Now</button>
                     </div>
                     <div class="col-lg-5">
                       <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -103,7 +105,7 @@
     </header>
     <main>
 
-      <section class="container my-5">
+      <section class="container my-5 categories">
         <div class="row g-4">
           <div class="col-lg-4 col-md-6 col-12">
             <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -126,7 +128,7 @@
         </div>
       </section>
 
-      <section class="container">
+      <section class="container" id="shoes">
         <h2>Shoes</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
           <div class="col">
@@ -137,7 +139,7 @@
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
               </div>
               <div class="m-3">
-                <button class="btn btn-warning">Buy Now</button>
+                <button class="panda-btn-buy-now">Buy Now</button>
               </div>
             </div>
           </div>
@@ -149,7 +151,7 @@
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
               <div class="m-3">
-                <button class="btn btn-warning">Buy Now</button>
+                <button class="panda-btn-buy-now">Buy Now</button>
               </div>
             </div>
           </div>
@@ -161,7 +163,7 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
               </div>
               <div class="m-3">
-                <button class="btn btn-warning">Buy Now</button>
+                <button class="panda-btn-buy-now">Buy Now</button>
               </div>
             </div>
           </div>
@@ -170,7 +172,7 @@
 
 
 
-      <section class="container mt-5">
+      <section class="container mt-5" id="backpack">
         <h2>Backpack</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
           <div class="col">
@@ -181,7 +183,7 @@
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
               </div>
               <div class="m-3">
-                <button class="btn btn-warning">Buy Now</button>
+                <button class="panda-btn-buy-now">Buy Now</button>
               </div>
             </div>
           </div>
@@ -193,7 +195,7 @@
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
               <div class="m-3">
-                <button class="btn btn-warning">Buy Now</button>
+                <button class="panda-btn-buy-now">Buy Now</button>
               </div>
             </div>
           </div>
@@ -205,16 +207,25 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
               </div>
               <div class="m-3">
-                <button class="btn btn-warning">Buy Now</button>
+                <button class="panda-btn-buy-now">Buy Now</button>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <section style="height: 300px;" class="container mt-5 rounded-3 align-items-center panda-bg-info d-flex justify-content-center" id="subscribe">
+        <div>
+          <h1>LET'S STAY IN TOUCH</h1>
+          <p>Get updates on sales, specials and more</p>
+          <input type="text" placeholder="Your mail" class="form-control">
+          <br>
+          <button class="panda-btn-buy-now">Submit</button>
+        </div>
+      </section>
 
     </main>
-    <footer>
-
+    <footer class="mt-5 text-center">
+      <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
     </footer>
 
     <!-- Bootstrap Script -->
